--- a/BankGuarantee.Desktop/Forms/LoginForm.resx
+++ b/BankGuarantee.Desktop/Forms/LoginForm.resx
@@ -331,6 +331,9 @@
         AAMAAAADAAAAAwAAAAcAAAAP/8AA//////8=
 </value>
   </data>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Авторизация</value>
   </data>
