--- a/BankGuarantee.Desktop/Properties/Resources.resx
+++ b/BankGuarantee.Desktop/Properties/Resources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BankGuarantee" xml:space="preserve">
+    <value>Банковская гарантия </value>
+  </data>
+  <data name="CreateNew" xml:space="preserve">
+    <value>Создать</value>
+  </data>
   <data name="CredentialsDenied" xml:space="preserve">
     <value>Введены неправильные данные для входа</value>
   </data>
